added random background generation

--- a/index.html
+++ b/index.html
@@ -1,37 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../AlgoBoostWeb/CSS/styles.css">
-  <script src="../AlgoBoostWeb/JS/script.js"></script>
-  <title>AlgoBoost</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=JetBrains Mono' rel='stylesheet'>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/styles.css">
+    <title>AlgoBoost</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+          rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=JetBrains Mono' rel='stylesheet'>
 </head>
 <body>
-  <header>
+<header>
     <img class="logo" src="../AlgoBoostWeb/images/logo.png" alt="AlgoBoost">
     <nav class="navbar">
-      <a class="navbarLink" href="#">About us</a>
-      <a class="navbarLink" href="#">Studying</a>
-      <a class="navbarLink" href="#">Events</a>
-      <a class="navbarLink" href="#">Our Team</a>
-      <a class="navbarLink" href="#">Contacts</a>
+        <a class="navbarLink" href="#">About us</a>
+        <a class="navbarLink" href="#">Studying</a>
+        <a class="navbarLink" href="#">Events</a>
+        <a class="navbarLink" href="#">Our Team</a>
+        <a class="navbarLink" href="#">Contacts</a>
     </nav>
-  </header>
-  <hr style="color:white">
+</header>
+<hr style="color:white">
 
-  <div class="background">
-    <p class="listingsOfCode">agent.Parse_Task(agent.Delete_useless_brackets([]rune(equation)), db, id) int(''.join(filter(str.isdigit, data.find_all('span', class_='span-like nowrap')[0].text)))</p>
-<!--    <p class="listingsOfCode">abracadabra</p>-->
-<!--    <p class="listingsOfCode">abracadabra</p>-->
-<!--    <p class="listingsOfCode">abracadabra</p>-->
-<!--    <p class="listingsOfCode">abracadabra</p>-->
-<!--    <p class="listingsOfCode">abracadabra</p>-->
-<!--    <p class="listingsOfCode">abracadabra</p>-->
-  </div>
+<div class="background">
+    <p class="listingsOfCode" id="LOF1"></p>
+    <p class="listingsOfCode" id="LOF2"></p>
+    <p class="listingsOfCode" id="LOF3"></p>
+    <p class="listingsOfCode" id="LOF4"></p>
+    <p class="listingsOfCode" id="LOF5"></p>
+    <p class="listingsOfCode" id="LOF6"></p>
+    <p class="listingsOfCode" id="LOF7"></p>
+    <p class="listingsOfCode" id="LOF8"></p>
+    <p class="listingsOfCode" id="LOF9"></p>
+    <p class="listingsOfCode" id="LOF10"></p>
+</div>
+<script src="JS/script.js"></script>
 </body>
 </html>
