--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
           rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=JetBrains Mono' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -22,20 +23,15 @@
         <a class="navbarLink" href="#">Contacts</a>
     </nav>
 </header>
-<hr style="color:white">
-
-<div class="background">
-    <p class="listingsOfCode" id="LOF1"></p>
-    <p class="listingsOfCode" id="LOF2"></p>
-    <p class="listingsOfCode" id="LOF3"></p>
-    <p class="listingsOfCode" id="LOF4"></p>
-    <p class="listingsOfCode" id="LOF5"></p>
-    <p class="listingsOfCode" id="LOF6"></p>
-    <p class="listingsOfCode" id="LOF7"></p>
-    <p class="listingsOfCode" id="LOF8"></p>
-    <p class="listingsOfCode" id="LOF9"></p>
-    <p class="listingsOfCode" id="LOF10"></p>
+<hr class="border-line">
+<div style="position: relative">
+    <div id="background">
+    </div>
+    <p class="maintext">
+        ALGOBOOST
+    </p>
 </div>
+<hr class="border-line">
 <script src="JS/script.js"></script>
 </body>
 </html>
