--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <header>
-    <img class="logo" src="../AlgoBoostWeb/images/logo.png" alt="AlgoBoost">
+    <img class="logo" src="images/logo.png" alt="AlgoBoost">
     <nav class="navbar">
         <a class="navbarLink" href="#">About us</a>
         <a class="navbarLink" href="#">Studying</a>
